--- a/package.json
+++ b/package.json
@@ -22,13 +22,17 @@
   },
   "dependencies": {
     "@nestjs/common": "^8.0.6",
+    "@nestjs/config": "^1.0.1",
     "@nestjs/core": "^8.0.6",
     "@nestjs/platform-express": "^8.0.6",
     "@nestjs/swagger": "^5.0.9",
+    "@nestjs/typeorm": "^8.0.2",
+    "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.3.0",
-    "swagger-ui-express": "^4.1.6"
+    "swagger-ui-express": "^4.1.6",
+    "typeorm": "^0.2.37"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.1.1",
@@ -45,6 +49,7 @@
     "eslint-plugin-prettier": "^3.4.1",
     "jest": "^27.1.0",
     "prettier": "^2.3.2",
+    "source-map-support": "^0.5.19",
     "supertest": "^6.1.6",
     "ts-jest": "^27.0.5",
     "ts-loader": "^9.2.5",
